--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -319,6 +319,7 @@ BGL_CORE_H = \
   util/sock.h \
   util/spanparsing.h \
   util/string.h \
+  util/subprocess.h \
   util/syserror.h \
   util/task_runner.h \
   util/thread.h \
