--- a/debian.minimal/control
+++ b/debian.minimal/control
@@ -8,7 +8,7 @@ Homepage: https://github.com/wu-emma/bitgesell
 
 Package: bitgesell
 Architecture: any
-Depends: libc6 (>= 2.27), libstdc++6 (>= 8.4.0), libbz2-1.0 (>= 1.0.6), liblzma5 (>= 5.2.2), zlib1g (>= 1:1.1.4),
+Depends: libc6 (>= 2.27), libstdc++6 (>= 8.4.0), libbz2-1.0 (>= 1.0.6), liblzma5 (>= 5.2.2), zlib1g (>= 1:1.1.4), libsqlite3-dev,
  openssl, perl-modules-5.26 | perl-modules-5.28 | perl-modules-5.30, ${misc:Depends}
 Description: BGL is an experimental digital currency that enables instant payments to anyone, anywhere in the world
  BGL is an experimental digital currency that enables instant payments to anyone,
