--- a/build_msvc/BGL-tx/BGL-tx.vcxproj
+++ b/build_msvc/BGL-tx/BGL-tx.vcxproj
@@ -12,11 +12,11 @@
     <ClCompile Include="..\..\src\BGL-tx.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\libBGLconsensus\libBGLconsensus.vcxproj">
-      <Project>{2b384fa8-9ee1-4544-93cb-0d733c25e8ce}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\libBGL_common\libBGL_common.vcxproj">
       <Project>{7c87e378-df58-482e-aa2f-1bc129bc19ce}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\libBGL_consensus\libBGL_consensus.vcxproj">
+      <Project>{2b384fa8-9ee1-4544-93cb-0d733c25e8ce}</Project>
     </ProjectReference>
     <ProjectReference Include="..\libBGL_crypto\libBGL_crypto.vcxproj">
       <Project>{6190199c-6cf4-4dad-bfbd-93fa72a760c1}</Project>
