--- a/build_msvc/BGL-wallet/BGL-wallet.vcxproj
+++ b/build_msvc/BGL-wallet/BGL-wallet.vcxproj
@@ -10,24 +10,24 @@
   </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\BGL-wallet.cpp" />
-        <ClCompile Include="..\..\src\init\BGL-wallet.cpp">
+    <ClCompile Include="..\..\src\init\BGL-wallet.cpp">
       <ObjectFileName>$(IntDir)init_BGL-wallet.obj</ObjectFileName>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\libBGLconsensus\libBGLconsensus.vcxproj">
-      <Project>{2b384fa8-9ee1-4544-93cb-0d733c25e8ce}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\libBGL_cli\libBGL_cli.vcxproj">
       <Project>{0667528c-d734-4009-adf9-c0d6c4a5a5a6}</Project>
     </ProjectReference>
     <ProjectReference Include="..\libBGL_common\libBGL_common.vcxproj">
       <Project>{7c87e378-df58-482e-aa2f-1bc129bc19ce}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\libBGL_consensus\libBGL_consensus.vcxproj">
+      <Project>{2b384fa8-9ee1-4544-93cb-0d733c25e8ce}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\libBGL_crypto\libBGL_crypto.vcxproj">
       <Project>{6190199c-6cf4-4dad-bfbd-93fa72a760c1}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\libBGL_server\libBGL_server.vcxproj">
+    <ProjectReference Include="..\libBGL_node\libBGL_node.vcxproj">
       <Project>{460fee33-1fe1-483f-b3bf-931ff8e969a5}</Project>
     </ProjectReference>
     <ProjectReference Include="..\libBGL_util\libBGL_util.vcxproj">
