Fix compilation after syncing to 31st May, 2024

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -95,6 +95,7 @@ BGL_TESTS =\
   test/descriptor_tests.cpp \
   test/disconnected_transactions.cpp \
   test/flatfile_tests.cpp \
+  test/feefrac_tests.cpp \
   test/fs_tests.cpp \
   test/getarg_tests.cpp \
   test/hash_tests.cpp \
